support different character encodings